# rpcsx-ui-android

./: ARCHITECTURE.md  ARM64_NEON_OPTIMIZATIONS.md  BENCHMARK_README.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  FILES_LIST.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_ACTIONS_IMPLEMENTATION_SUMMARY.md  GITHUB_ACTIONS_QUICKSTART.sh  GUI_INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  README_ARMv9.md  README_nbtc_tflite.md  RSX_GRAPHICS_ENGINE.md  SETUP_GUIDE.md  VISUAL_ASSETS.md  benchmark_config.xml  build-log.txt  build_armv9.sh  build_log.txt  build_output.txt  build_status.json  build_trace.txt  commit_agvsol.sh  dk install java 17.0.14-ms  git_check.txt  git_diff_stat.txt  git_log.txt  git_log_new.txt  git_show_agvsol.txt  gradle.properties  mesa_turnip.conf  rpcsx_armv9.conf  tmp_test.cpp
.github/: BUILD_TRIGGER.md  README.md
.github/workflows/: build-apk.yml  build-armv9.yml  build-librpcsx.yml  build-on-ci-debug.yml  build.yml  build_android.yml  debug-environment.yml  debug-on-push.yml  quality-check.yml
.logs/: gradle_after2.txt  gradle_after_cpu_token_fix.txt  gradle_after_java17.txt  gradle_after_llvm_fix.txt  gradle_after_native_sweep.txt  gradle_after_native_sweep_fix.txt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/nbtc/: model.tflite
app/src/main/cpp/: CMakeLists.txt  bootstrap.cpp  drs_engine.cpp  drs_engine.h  fastmem_mapper.cpp  fastmem_mapper.h  firmware_spoof.cpp  firmware_spoof.h  frostbite_hacks.cpp  frostbite_hacks.h  game_patches.cpp  game_patches.h  game_profiles.cpp  game_profiles.h  library_emulation.cpp  library_emulation.h  native-lib.cpp  nce_engine.cpp  nce_engine.h  nce_hook.cpp  patch_installer.cpp  patch_installer.h  pipeline_cache.cpp  pipeline_cache.h  plt_hook.cpp  plt_hook.h  ppu_interceptor.cpp  ppu_interceptor.h  realsteel_hacks.cpp  realsteel_hacks.h  save_converter.cpp  save_converter.h  shader_cache_manager.cpp  shader_cache_manager.h  signal_handler.cpp  signal_handler.h  sve2_optimizations.cpp  sve2_optimizations.h  syscall_stubs.cpp  syscall_stubs.h  (+6 more)
app/src/main/cpp/fsr31/: fsr31.cpp  fsr31.h
app/src/main/cpp/gpu/: agvsol_manager.cpp  agvsol_manager.h  gpu_detector.cpp  gpu_detector.h  shader_compiler.cpp  shader_compiler.h  vulkan_agvsol_integration.cpp  vulkan_agvsol_integration.h  vulkan_renderer.cpp  vulkan_renderer.h
app/src/main/cpp/gpu/profiles/: adreno_profile.json  generic_profile.json  mali_profile.json  powervr_profile.json
app/src/main/cpp/gpu/shaders/vendor_specific/adreno/: fragment_optimized.frag  vertex_optimized.vert
app/src/main/cpp/gpu/shaders/vendor_specific/mali/: fragment_optimized.frag  vertex_optimized.vert
app/src/main/cpp/gpu/shaders/vendor_specific/powervr/: fragment_optimized.frag  vertex_optimized.vert
app/src/main/cpp/libadrenotools/adrenotools/: driver.h  priv.h
app/src/main/cpp/nbtc_engine/: nbtc_engine.cpp  nbtc_engine.h
app/src/main/cpp/nce_core/: NCEARM64.cpp  NCEARM64.h  PPUInstructions.h  game_mode_android.cpp  game_mode_android.h  llvm_optimized_ppu.cpp  llvm_optimized_ppu_spu.h  llvm_optimized_spu.cpp  nce_native.cpp  nce_native.h  nce_standalone.cpp  nce_standalone.h  ppu_interpreter.cpp  ppu_interpreter.h  ppu_jit_compiler.cpp  ppu_jit_compiler.h  profiler.cpp  profiler.h  ps3_memory_map.h  ps3_syscall.h  rsx_emulator.cpp  rsx_emulator.h  simd_utils.cpp  simd_utils.h  spu_interpreter.cpp  spu_interpreter.h  spu_jit_compiler.cpp  spu_jit_compiler.h  stubs.cpp  thread_pool.cpp  thread_pool.h
app/src/main/cpp/nce_jit/: arm64_emitter.cpp  arm64_emitter.h  jit_compiler.h  ppc_decoder.cpp  ppc_decoder.h  x86_decoder.cpp  x86_decoder.h
app/src/main/cpp/nce_v8/: branch_predictor.h  llvm_backend.cpp  llvm_backend.h  nce_v8.cpp  nce_v8.h  tiered_jit.cpp  tiered_jit.h  vectorizer.h
app/src/main/cpp/rpcsx/android/: CMakeLists.txt
app/src/main/cpp/rpcsx/android/src/: cutscene_bridge.cpp  nbtc_bridge.cpp  nbtc_engine.cpp  nbtc_jni.cpp  rpcsx-android.cpp
app/src/main/cpp/rpcsx/ps3fw/: cellSail.cpp
app/src/main/cpp/rpcsx/rpcs3/: rpcs3_version.cpp
app/src/main/cpp/rpcsx/rpcs3/Crypto/: utils.cpp
app/src/main/cpp/rpcsx/rpcs3/Emu/CPU/: CPUTranslator.h
app/src/main/cpp/rpcsx/rpcs3/Emu/Cell/: SPULLVMRecompiler.cpp
app/src/main/cpp/rpcsx/rpcs3/Emu/RSX/Common/: texture_cache.cpp  texture_cache_checker.h  time.hpp
app/src/main/cpp/rpcsx/rpcs3/Emu/RSX/GL/: GLResolveHelper.cpp
app/src/main/cpp/rpcsx/rpcs3/Emu/RSX/GL/glutils/: capabilities.h  image.cpp  ring_buffer.cpp
app/src/main/cpp/rpcsx/rpcs3/Emu/RSX/GL/upscalers/fsr1/: fsr_pass.cpp
app/src/main/cpp/rpcsx/rpcs3/Emu/RSX/Host/: RSXDMAWriter.cpp
app/src/main/cpp/rpcsx/rpcs3/Emu/RSX/Overlays/: overlay_manager.cpp
app/src/main/cpp/rpcsx/rpcs3/Emu/RSX/VK/: VKQueryPool.cpp
app/src/main/cpp/rpcsx/rpcs3/Emu/RSX/VK/upscalers/fsr1/: fsr_pass.cpp
app/src/main/cpp/rpcsx/rpcs3/Emu/RSX/VK/vkutils/: data_heap.cpp  scratch.cpp
app/src/main/cpp/tflite_stub/: tflite_stub.c
app/src/main/cpp/tflite_stub/tensorflow/lite/c/: c_api.h
app/src/main/java/net/rpcsx/: FirmwareRepository.kt  GameRepository.kt  GraphicsFrame.kt  MainActivity.kt  MyApp.kt  Nbtc.kt  PrecompilerService.kt  PreloadProvider.kt  ProgressRepository.kt  RPCSX.kt  RPCSXActivity.kt  RPCSXBenchmark.java  UsbDeviceRepository.kt  UserRepository.kt
app/src/main/java/net/rpcsx/media/: CutsceneActivity.kt  CutsceneBridge.kt  CutscenePlayer.kt
app/src/main/java/net/rpcsx/nbtc/: NbtcBridge.kt
app/src/main/jniLibs/: README.md
app/src/main/jniLibs/arm64-v8a/: libtensorflowlite_c.so.placeholder
app/src/main/jniLibs/armeabi-v7a/: libtensorflowlite_c.so.placeholder
app/src/main/res/drawable/: ic_rsx_engine.xml  ic_settings.xml  rsx_button_bg.xml
app/src/main/res/layout/: activity_rpcs3.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: file_paths.xml
patches/: rpcsx-nce-arm64-jit.patch
scripts/: build-armv9-local.sh  build_release_ninja.sh  clean_from_source.sh  collect_rpcsx_diag.sh  download_tflite_prebuilt.sh  manage-llvm-and-patches.sh
(+30 files in other folders)
